Remove backend module from the framework & fixed theme mod path issue

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "thl/support",
-    "description": "The THL Framework.",
-    "keywords": ["framework", "thl"],
+    "name": "mods/support",
+    "description": "The Mods Support package.",
+    "keywords": ["framework", "mods"],
     "license": "MIT",
     "homepage": "https://thehackerleague.com",
     "support": {
-        "issues": "https://github.com/thl/framework/issues",
-        "source": "https://github.com/thl/framework"
+        "issues": "https://github.com/thehackerleague/framework/issues",
+        "source": "https://github.com/thehackerleague/framework"
     },
     "authors": [
         {
